--- a/templates/etc/init.d/hornetq.erb
+++ b/templates/etc/init.d/hornetq.erb
@@ -28,7 +28,7 @@ APP_LONG_NAME="HornetQ <%= @version %>"
 
 # Application folder
 APP_FOLDER="/opt/hornetq<%= @package_version %>"
-CONFIG_FOLDER="<%= @real_config_folder %>"
+CONFIG_FOLDER="<%= @config_folder %>"
 RUN_FOLDER="<%= @real_run_folder %>"
 
 # Wrapper
