Added property for ping timeout

--- a/templates/etc/hornetq/hornetq-wrapper.conf.erb
+++ b/templates/etc/hornetq/hornetq-wrapper.conf.erb
@@ -226,3 +226,7 @@ wrapper.ntservice.starttype=AUTO_START
 
 # Allow the service to interact with the desktop.
 wrapper.ntservice.interactive=false
+
+# Time to wait until Tanuki kills the JVM process
+# See https://confluence.atlassian.com/pages/viewpage.action?pageId=186712400
+wrapper.ping.timeout=<%= @pingtimeout %>
