consistent name for property for ping timeout

--- a/templates/etc/hornetq/hornetq-wrapper.conf.erb
+++ b/templates/etc/hornetq/hornetq-wrapper.conf.erb
@@ -229,4 +229,4 @@ wrapper.ntservice.interactive=false
 
 # Time to wait until Tanuki kills the JVM process
 # See https://confluence.atlassian.com/pages/viewpage.action?pageId=186712400
-wrapper.ping.timeout=<%= @pingtimeout %>
+wrapper.ping.timeout=<%= @ping_timeout %>
