--- a/templates/etc/hornetq/hornetq-wrapper.conf.erb
+++ b/templates/etc/hornetq/hornetq-wrapper.conf.erb
@@ -108,7 +108,7 @@ wrapper.debug=<%= @debug %>
 wrapper.console.format=PM
 
 # Log Level for console output.  (See docs for log levels)
-wrapper.console.loglevel=<%= @log_level %>
+wrapper.console.loglevel=INFO
 
 # Log file to use for wrapper output logging.
 wrapper.logfile=%LOG_FOLDER%/%APPLICATION_NAME%-wrapper.log
@@ -117,7 +117,7 @@ wrapper.logfile=%LOG_FOLDER%/%APPLICATION_NAME%-wrapper.log
 wrapper.logfile.format=LPTM
 
 # Log Level for log file output.  (See docs for log levels)
-wrapper.logfile.loglevel=INFO
+wrapper.logfile.loglevel=<%= @log_level %>
 
 # Maximum size that the log file will be allowed to grow to before
 #  the log is rolled. Size is specified in bytes.  The default value
